2013-09-03  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfont.m (INVALID_GLYPH): New define.
	(nsfont_encode_char): Use INVALID_GLYPH.
	(ns_uni_to_glyphs): Ditto, check for NSNullGlyph (Bug#15138).

2013-09-02  Dmitry Antipov  <dmantipov@yandex.ru>

	* xterm.c (x_last_mouse_movement_time): Revert last change.
	This code should use XDisplayMotionBufferSize to check display's
	motion history first, and there are few other issues as well.
	(x_scroll_bar_note_movement): Pass XMotionEvent rather than XEvent.
	(handle_one_xevent): Adjust user.

2013-09-02  Martin Rudalics  <rudalics@gmx.at>

	* dispnew.c (Flast_nonminibuf_frame): Move from here ...
	* frame.c (Flast_nonminibuf_frame): ... to here.
	(check_minibuf_window): Don't abort if no window was found
	(Bug#15247).

2013-09-02  Dmitry Antipov  <dmantipov@yandex.ru>

	Use XGetMotionEvents to ask the last mouse motion time from X server.
	* xterm.c (X_MOTION_HISTORY): Default to 1.
	(x_last_mouse_movement_time) [X_MOTION_HISTORY]: New function.
	(x_last_mouse_movement_time) [!X_MOTION_HISTORY]: Legacy version.
	(note_mouse_movement, x_scroll_bar_note_movement) [!X_MOTION_HISTORY]:
	Ifdef away legacy code.
	(XTmouse_position, x_scroll_bar_report_motion):
	Use x_last_mouse_movement_time.
	(handle_one_xevent): Use event.xunmap and not event.xmap when handling
	UnmapNotify event.

2013-09-02  Dmitry Antipov  <dmantipov@yandex.ru>

	* msdos.c (last_mouse_window): Move to...
	(dos_rawgetc): ...this function and adjust comment.
	* nsterm.m (last_window): Rename to last_mouse_window, move to...
	(mouseMoved): ...this function and adjust comment.
	* w32term.c (last_window): Likewise with...
	(w32_read_socket): ...this function.
	* xterm.c (last_window): Likewise with...
	(handle_one_xevent): ...this function.

2013-09-02  Dmitry Antipov  <dmantipov@yandex.ru>

	* window.h (Vmouse_window, Vmouse_event): Remove the leftovers.
	* xterm.c (toplevel): Drop obsolete comment and move compose_status...
	(handle_one_xevent): ...to here.