@@ -1,3 +1,15 @@
+2013-09-03  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* xterm.h (struct scroll_bar): Prefer int to Lisp_Object
+	for 'dragging' member.
+	* gtkutil.c (xg_set_toolkit_scroll_bar_thumb):
+	* xterm.c (xt_action_hook, xm_scroll_callback, xg_scroll_callback)
+	(xg_end_scroll_callback, xaw_jump_callback, xaw_scroll_callback)
+	(x_set_toolkit_scroll_bar_thumb, x_scroll_bar_create)
+	(x_scroll_bar_set_handle, XTset_vertical_scroll_bar)
+	(x_scroll_bar_handle_click, x_scroll_bar_note_movement)
+	(x_scroll_bar_report_motion): Related users changed.
+
 2013-09-03  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* nsfont.m (INVALID_GLYPH): New define.
